force-app/main/default/objects/Retail_Bundle__c/Retail_Bundle__c.object-meta.xml
<CustomObject>
    <label>Retail Bundle</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Bundle Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>