force-app/main/default/objects/Retail_Bundle__c/fields/Bundle_No__c.field-meta.xml
<CustomField>
    <fullName>Bundle_No__c</fullName>
    <label>Bundle No.</label>
    <type>TextArea</type>
</CustomField>