force-app/main/default/objects/Retail_Bundle__c/fields/Get_ID__c.field-meta.xml
<CustomField>
    <fullName>Get_ID__c</fullName>
    <label>Get ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>