force-app/main/default/objects/Retail_Bundle__c/fields/Get_Lot_No__c.field-meta.xml
<CustomField>
    <fullName>Get_Lot_No__c</fullName>
    <label>Get Lot No</label>
    <type>TextArea</type>
</CustomField>