force-app/main/default/objects/Retail_Bundle__c/fields/Order_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Quantity__c</fullName>
    <label>Order Product Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>