force-app/main/default/objects/Retail_Bundle__c/fields/Packing_List__c.field-meta.xml
<CustomField>
    <fullName>Packing_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Packing List</label>
    <referenceTo>Retail_Packaging_List__c</referenceTo>
    <relationshipLabel>Retail Bundles</relationshipLabel>
    <relationshipName>Retail_Bundles</relationshipName>
    <type>Lookup</type>
</CustomField>