force-app/main/default/objects/Retail_Bundle__c/fields/Purchase_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_ID__c</fullName>
    <label>Purchase Order ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>