force-app/main/default/objects/Retail_Bundle__c/fields/Scan_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Scan_QR_Code__c</fullName>
    <label>Scan QR Code</label>
    <type>TextArea</type>
</CustomField>