force-app/main/default/objects/Retail_Bundle__c/fields/Tare_Weight__c.field-meta.xml
<CustomField>
    <fullName>Tare_Weight__c</fullName>
    <label>Tare Weight</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>